Personalization of config
Signed-off-by: N0bl3 <alexandre.noble.pro@gmail.com>

--- a/_posts/2017-10-17-post.md
+++ b/_posts/2017-10-17-post.md
@@ -4,8 +4,4 @@ author: Admin
 categories: ["test", "first"]
 ---
 
-***Post test***
-
-{{page.title}} {{page.author}} {{page.categories}}
-
-*post test*
+<h4><strong>{{ page.date | date: "%B %e, %Y" }} <small>. {{ page.category }} .</small> {{ page.title }}</strong></h4>
